# egui-svg

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: app.rs  lib.rs  main.rs
src/: color.rs  fit.rs  lib.rs
